                CHANGES IN RMOA VERSION 1.0

    o    Initial version of the package
