@@ -1,9 +1,10 @@
-# Generated by roxygen2 (4.0.2): do not edit by hand
+# Generated by roxygen2 (4.0.1): do not edit by hand
 
 S3method(MOAattributes,data.frame)
 S3method(factorise,data.frame)
 S3method(predict,MOA_trainedmodel)
 S3method(print,MOA_classifier)
+S3method(print,MOA_recommender)
 S3method(print,MOA_regressor)
 S3method(print,MOAmodelOptions)
 S3method(print,summary_MOA_classifier)
@@ -17,6 +18,8 @@ export(AccuracyUpdatedEnsemble)
 export(AccuracyWeightedEnsemble)
 export(ActiveClassifier)
 export(AdaHoeffdingOptionTree)
+export(BRISMFPredictor)
+export(BaselinePredictor)
 export(DACC)
 export(DecisionStump)
 export(FIMTDD)
@@ -27,6 +30,7 @@ export(LeveragingBag)
 export(LimAttClassifier)
 export(LimAttHoeffdingTree)
 export(MOA_classifier)
+export(MOA_recommender)
 export(MOA_regressor)
 export(MOAattributes)
 export(MOAoptions)
